feat: implement audit · clean CF config, stripe checkout, mail, docs

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,18 @@ APP_URL=
 RESEND_API_KEY=
 MAIL_FROM=
 
+
+
+# Logging
+LOG_LEVEL=info
+
+# Contact Form Configuration
+ENABLE_CONTACT_RATE_LIMIT=1
+ALLOWED_ORIGINS=
+
+# Cloudflare Pages Environment Variables Management:
+# For production and preview environments, these variables (including secrets like API keys)
+# should be managed exclusively within the Cloudflare Dashboard.
+# This ensures secure handling and separation of concerns.
+# Do NOT commit sensitive values directly to this file.
+
