--- a/.github/workflows/manus-ci.yml
+++ b/.github/workflows/manus-ci.yml
@@ -10,15 +10,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      GH_TOKEN: ${{ secrets.GH_TOKEN }}   # Debes haber creado este Secret en el repo
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
     steps:
       - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GH_TOKEN }}  # usa el PAT para checkout si el repo es privado
-      - name: GitHub CLI auth (no interactivo)
-        run: |
-          echo "$GH_TOKEN" | gh auth login --hostname github.com --with-token
-          gh auth status -h github.com
+          token: ${{ secrets.GH_TOKEN }}
       - name: Prueba de acceso al repo
         run: |
           git ls-remote https://x-access-token:${GH_TOKEN}@github.com/clouitreee/protech.git
