--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "a11y": "eslint --ext .js,.jsx,.ts,.tsx --plugin jsx-a11y .",
     "test:smoke": "playwright test",
-    "ci": "npm run lint && npm run typecheck && npm run format:check && npm run a11y"
+    "test:a11y": "playwright test tests/a11y.spec.ts",
+    "ci": "npm run lint && npm run typecheck && npm run format:check && npm run a11y && npm run test:a11y"
   },
   "dependencies": {
     "next": "^14.2.0",
@@ -33,6 +34,8 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "prettier": "^3.4.2",
     "typescript": "^5.7.2",
+    "@axe-core/playwright": "^4.10.2",
+    "axe-core": "^4.11.0",
     "@playwright/test": "^1.49.1"
   }
 }
