chore(stripe): update webhook route with non-deprecated config and add minimal test
This commit updates the Stripe webhook route to use the non-deprecated configuration for Next.js App Router. It ensures the route runs on the Node.js runtime, is force-dynamic, and revalidate=0. The body is read as raw text to allow for proper Stripe signature verification.

A minimal Playwright test is also added to verify the webhook route is correctly configured to attempt signature verification.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "a11y": "eslint --ext .js,.jsx,.ts,.tsx --plugin jsx-a11y .",
+    "test:stripe-webhook": "playwright test tests/stripe-webhook.spec.ts",
     "test:smoke": "playwright test",
-    "ci": "npm run lint && npm run typecheck && npm run format:check && npm run a11y"
+    "ci": "npm run lint && npm run typecheck && npm run format:check && npm run a11y && npm run test:stripe-webhook"
   },
   "dependencies": {
     "next": "^14.2.0",
