--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "a11y": "eslint --ext .js,.jsx,.ts,.tsx --plugin jsx-a11y .",
     "test:stripe-webhook": "playwright test tests/stripe-webhook.spec.ts",
     "test:smoke": "playwright test",
-    "ci": "npm run lint && npm run typecheck && npm run format:check && npm run a11y && npm run test:stripe-webhook"
+    "vat:guard": "node scripts/guard-vat.js",
+    "ci": "npm run lint && npm run typecheck && npm run format:check && npm run a11y && npm run test:stripe-webhook && npm run vat:guard"
   },
   "dependencies": {
     "next": "^14.2.0",
