feat(a11y): implement A11y checks in CI with Axe and Playwright
This commit integrates accessibility checks into the CI pipeline using Axe and Playwright. It includes a dedicated test file to scan key pages for automatically detectable accessibility issues.

### Changes Made:
- Installed  and  as dev dependencies.
- Created  to validate accessibility on homepage, /leistungen, /pakete-preise, and /kontakt.
- Added a  script to .
- Integrated  into the main  script in .

--- a/package.json
+++ b/package.json
@@ -15,27 +15,29 @@
     "test:stripe-webhook": "playwright test tests/stripe-webhook.spec.ts",
     "test:smoke": "playwright test",
     "vat:guard": "node scripts/guard-vat.js",
-    "ci": "npm run lint && npm run typecheck && npm run format:check && npm run a11y && npm run test:stripe-webhook && npm run vat:guard"
+    "test:a11y": "playwright test tests/a11y.spec.ts",
+    "ci": "npm run lint && npm run typecheck && npm run format:check && npm run a11y && npm run test:stripe-webhook && npm run vat:guard && npm run test:a11y"
   },
   "dependencies": {
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "stripe": "^17.5.0",
-    "resend": "^4.0.1"
+    "resend": "^4.0.1",
+    "stripe": "^17.5.0"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.2",
+    "@playwright/test": "^1.49.1",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "axe-core": "^4.11.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "prettier": "^3.4.2",
-    "typescript": "^5.7.2",
-    "@playwright/test": "^1.49.1"
+    "typescript": "^5.7.2"
   }
 }
-
