chore(env): update .env.example with required variables
This commit updates the  file to include all required environment variables for the project, ensuring a clear setup for new developers and deployment environments.

### Changes Made:
- Added , , and  to .
- Ensured all variables are listed without values, as per best practices.

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ APP_URL=
 RESEND_API_KEY=
 MAIL_FROM=
 
+
+
+# Logging and Contact Form Configuration
+LOG_LEVEL=info
+ENABLE_CONTACT_RATE_LIMIT=true
+ALLOWED_ORIGINS=http://localhost:3000
