--- a/.github/workflows/manus-ci.yml
+++ b/.github/workflows/manus-ci.yml
@@ -1,24 +1,42 @@
-name: manus-ci
-on:
-  workflow_dispatch:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+ name: manus-ci
+ on:
+   push:
+     branches: [ main, "**" ]
+   pull_request:
++permissions:
++  contents: write
++  pull-requests: write
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ secrets.GH_TOKEN }}   # Debes haber creado este Secret en el repo
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GH_TOKEN }}  # usa el PAT para checkout si el repo es privado
-      - name: GitHub CLI auth (no interactivo)
-        run: |
-          echo "$GH_TOKEN" | gh auth login --hostname github.com --with-token
-          gh auth status -h github.com
-      - name: Prueba de acceso al repo
-        run: |
-          git ls-remote https://x-access-token:${GH_TOKEN}@github.com/clouitreee/protech.git
+ jobs:
+   build:
+     runs-on: ubuntu-latest
+-    env:
+-      GH_TOKEN: ${{ secrets.GH_TOKEN }}
+     steps:
+-      - uses: actions/checkout@v4
+-      - name: GitHub CLI auth (no interactivo)
+-        run: |
+-          echo "$GH_TOKEN" | gh auth login --hostname github.com --with-token
+-          gh auth status -h github.com
+-      - name: Prueba de acceso al repo
+-        run: |
+-          git ls-remote https://x-access-token:${GH_TOKEN}@github.com/clouitreee/protech.git
++      - uses: actions/checkout@v4
++        with:
++          token: ${{ secrets.GH_TOKEN }}
++          persist-credentials: false
++
++      - name: gh status (sin login interactivo)
++        env:
++          GH_TOKEN: ${{ secrets.GH_TOKEN }}
++        run: |
++          gh --version
++          gh auth status -h github.com || true
++
++      - name: Prueba de acceso al repo (git + token)
++        env:
++          GH_TOKEN: ${{ secrets.GH_TOKEN }}
++        run: |
++          git ls-remote https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git >/dev/null
++
++      # …tus pasos de build/test aquí…
